Feature: minification button + Add: styling

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <div id="app">
-      <h1>Hello, this a personal obfuscator app!</h1>
-      <quote>This is a small app to practice my coding skills and to consolidate my knowledge on the principle of obfuscation</quote>
+      <h1>Hello, this a personal js code transformer app!</h1>
+      <quote>This is a small app to practice my coding skills and to consolidate my knowledge on the principle of obfuscation & minification</quote>
         <div class="flexBoxes">
           <div class="flexBox">
             <label for="code">Insert your js code here: </label>
             <textarea id="code" placeholder="Enter your code here"></textarea>
             <div class="buttons">
               <button id="clear">Clear</button>
+              <button id="minify">Minify</button>
               <button id="obfuscate">Obfuscate</button>
             </div>
           </div>
